# socketdemo

source/: CMakeLists.txt
source/TestClient/: CMakeLists.txt  main.cpp
source/TestLib/: CMakeLists.txt  testli.cpp
source/TestLib/include/: testlib.h
source/TestServer/: CMakeLists.txt  main.cpp
source/TestSocket/: CMakeLists.txt  main.cpp
source/XClient/: CMakeLists.txt  xclient.cpp
source/XClient/include/: xclient.h
source/XSocket/: CMakeLists.txt  xsocket.cpp
source/XSocket/include/: xsocket.h
